// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkoutMenuSheet — snapshots DoD: live 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="auto"
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "transform": [
          {
            "translateY": 0,
          },
        ],
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "flex": 1,
            "justifyContent": "flex-end",
          },
          {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        accessibilityLabel="Close"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "rgba(0, 0, 0, 0.5)",
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        style={
          [
            {
              "backgroundColor": "#17191C",
              "borderTopLeftRadius": 18,
              "borderTopRightRadius": 18,
              "maxHeight": "80%",
            },
            false,
            {
              "paddingBottom": 54,
            },
          ]
        }
        testID="bottom-sheet"
      >
        <View
          onResponderGrant={[Function]}
          onResponderRelease={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "paddingVertical": 8,
            }
          }
          testID="bottom-sheet-grabber-area"
        >
          <View
            style={
              {
                "backgroundColor": "#2A2D31",
                "borderRadius": 2.5,
                "height": 5,
                "width": 36,
              }
            }
          />
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingBottom": 10,
              "paddingHorizontal": 20,
            }
          }
        >
          <View
            style={
              {
                "flexShrink": 1,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#F5F5F4",
                  "fontSize": 22,
                  "fontWeight": "500",
                }
              }
            >
              Week 6 Day 2
            </Text>
            <Text
              style={
                {
                  "color": "#6B7076",
                  "fontSize": 15,
                  "marginTop": 2,
                }
              }
            >
              Upper/lower
            </Text>
          </View>
        </View>
        <RCTScrollView
          contentContainerStyle={
            {
              "paddingHorizontal": 20,
            }
          }
          keyboardShouldPersistTaps="handled"
        >
          <View>
            <View
              accessibilityLabel="Add exercise"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "borderTopColor": "#1E2125",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "gap": 14,
                  "paddingVertical": 14,
                }
              }
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={20}
                bbWidth={20}
                focusable={false}
                height={20}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    {
                      "flex": 0,
                      "height": 20,
                      "width": 20,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width={20}
              >
                <RNSVGGroup
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                >
                  <RNSVGGroup
                    fill={null}
                    propList={
                      [
                        "fill",
                        "stroke",
                        "strokeWidth",
                      ]
                    }
                    stroke={
                      {
                        "payload": 4287271065,
                        "type": 0,
                      }
                    }
                    strokeWidth={1.8}
                  >
                    <RNSVGPath
                      d="M12 5v14M5 12h14"
                      fill={
                        {
                          "payload": 4278190080,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                    />
                  </RNSVGGroup>
                </RNSVGGroup>
              </RNSVGSvgView>
              <Text
                style={
                  [
                    {
                      "color": "#C9CDD2",
                      "flex": 1,
                      "fontSize": 17,
                      "fontWeight": "400",
                    },
                    false,
                    false,
                  ]
                }
              >
                Add exercise
              </Text>
            </View>
            <View
              accessibilityLabel="Skip workout"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "borderTopColor": "#1E2125",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "gap": 14,
                  "paddingVertical": 14,
                }
              }
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={20}
                bbWidth={20}
                focusable={false}
                height={20}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    {
                      "flex": 0,
                      "height": 20,
                      "width": 20,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width={20}
              >
                <RNSVGGroup
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                >
                  <RNSVGGroup
                    fill={null}
                    propList={
                      [
                        "fill",
                        "stroke",
                        "strokeWidth",
                      ]
                    }
                    stroke={
                      {
                        "payload": 4287271065,
                        "type": 0,
                      }
                    }
                    strokeWidth={1.8}
                  >
                    <RNSVGPath
                      d="M6 6l8 6-8 6z"
                      fill={
                        {
                          "payload": 4278190080,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                    />
                    <RNSVGPath
                      d="M18 6v12"
                      fill={
                        {
                          "payload": 4278190080,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                    />
                  </RNSVGGroup>
                </RNSVGGroup>
              </RNSVGSvgView>
              <Text
                style={
                  [
                    {
                      "color": "#C9CDD2",
                      "flex": 1,
                      "fontSize": 17,
                      "fontWeight": "400",
                    },
                    false,
                    false,
                  ]
                }
              >
                Skip workout
              </Text>
            </View>
            <View
              accessibilityLabel="Rename mesocycle"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "borderTopColor": "#1E2125",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "gap": 14,
                  "paddingVertical": 14,
                }
              }
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={20}
                bbWidth={20}
                focusable={false}
                height={20}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    {
                      "flex": 0,
                      "height": 20,
                      "width": 20,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width={20}
              >
                <RNSVGGroup
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                >
                  <RNSVGGroup
                    fill={null}
                    propList={
                      [
                        "fill",
                        "stroke",
                        "strokeWidth",
                      ]
                    }
                    stroke={
                      {
                        "payload": 4287271065,
                        "type": 0,
                      }
                    }
                    strokeWidth={1.8}
                  >
                    <RNSVGPath
                      d="M15 5l4 4L9 19H5v-4zM13 7l4 4"
                      fill={
                        {
                          "payload": 4278190080,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                    />
                  </RNSVGGroup>
                </RNSVGGroup>
              </RNSVGSvgView>
              <Text
                style={
                  [
                    {
                      "color": "#C9CDD2",
                      "flex": 1,
                      "fontSize": 17,
                      "fontWeight": "400",
                    },
                    false,
                    false,
                  ]
                }
              >
                Rename mesocycle
              </Text>
            </View>
            <View
              accessibilityLabel="Mesocycle history"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "borderTopColor": "#1E2125",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "gap": 14,
                  "paddingVertical": 14,
                }
              }
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={20}
                bbWidth={20}
                focusable={false}
                height={20}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    {
                      "flex": 0,
                      "height": 20,
                      "width": 20,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width={20}
              >
                <RNSVGGroup
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                >
                  <RNSVGGroup
                    fill={null}
                    propList={
                      [
                        "fill",
                        "stroke",
                        "strokeWidth",
                      ]
                    }
                    stroke={
                      {
                        "payload": 4287271065,
                        "type": 0,
                      }
                    }
                    strokeWidth={1.8}
                  >
                    <RNSVGPath
                      d="M4.5 12a7.5 7.5 0 1 0 2.2-5.3L4.5 9"
                      fill={
                        {
                          "payload": 4278190080,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                    />
                    <RNSVGPath
                      d="M4.5 4.5V9H9"
                      fill={
                        {
                          "payload": 4278190080,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                    />
                    <RNSVGPath
                      d="M12 8v4l3 2"
                      fill={
                        {
                          "payload": 4278190080,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                    />
                  </RNSVGGroup>
                </RNSVGGroup>
              </RNSVGSvgView>
              <Text
                style={
                  [
                    {
                      "color": "#C9CDD2",
                      "flex": 1,
                      "fontSize": 17,
                      "fontWeight": "400",
                    },
                    false,
                    false,
                  ]
                }
              >
                Mesocycle history
              </Text>
            </View>
            <View
              accessibilityLabel="Stop mesocycle"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "borderTopColor": "#1E2125",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "gap": 14,
                  "paddingVertical": 14,
                }
              }
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={20}
                bbWidth={20}
                focusable={false}
                height={20}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    {
                      "flex": 0,
                      "height": 20,
                      "width": 20,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width={20}
              >
                <RNSVGGroup
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                >
                  <RNSVGGroup
                    fill={null}
                    propList={
                      [
                        "fill",
                        "stroke",
                        "strokeWidth",
                      ]
                    }
                    stroke={
                      {
                        "payload": 4293023564,
                        "type": 0,
                      }
                    }
                    strokeWidth={1.8}
                  >
                    <RNSVGRect
                      fill={
                        {
                          "payload": 4278190080,
                          "type": 0,
                        }
                      }
                      height={12}
                      rx={2}
                      width={12}
                      x={6}
                      y={6}
                    />
                  </RNSVGGroup>
                </RNSVGGroup>
              </RNSVGSvgView>
              <Text
                style={
                  [
                    {
                      "color": "#C9CDD2",
                      "flex": 1,
                      "fontSize": 17,
                      "fontWeight": "400",
                    },
                    {
                      "color": "#E2574C",
                    },
                    false,
                  ]
                }
              >
                Stop mesocycle
              </Text>
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`WorkoutMenuSheet — snapshots DoD: preview 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="auto"
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "transform": [
          {
            "translateY": 0,
          },
        ],
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "flex": 1,
            "justifyContent": "flex-end",
          },
          {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        accessibilityLabel="Close"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "rgba(0, 0, 0, 0.5)",
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        style={
          [
            {
              "backgroundColor": "#17191C",
              "borderTopLeftRadius": 18,
              "borderTopRightRadius": 18,
              "maxHeight": "80%",
            },
            false,
            {
              "paddingBottom": 54,
            },
          ]
        }
        testID="bottom-sheet"
      >
        <View
          onResponderGrant={[Function]}
          onResponderRelease={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "paddingVertical": 8,
            }
          }
          testID="bottom-sheet-grabber-area"
        >
          <View
            style={
              {
                "backgroundColor": "#2A2D31",
                "borderRadius": 2.5,
                "height": 5,
                "width": 36,
              }
            }
          />
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingBottom": 10,
              "paddingHorizontal": 20,
            }
          }
        >
          <View
            style={
              {
                "flexShrink": 1,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#F5F5F4",
                  "fontSize": 22,
                  "fontWeight": "500",
                }
              }
            >
              Week 7 Day 2
            </Text>
            <Text
              style={
                {
                  "color": "#6B7076",
                  "fontSize": 15,
                  "marginTop": 2,
                }
              }
            >
              Upper/lower
            </Text>
          </View>
        </View>
        <RCTScrollView
          contentContainerStyle={
            {
              "paddingHorizontal": 20,
            }
          }
          keyboardShouldPersistTaps="handled"
        >
          <View>
            <View
              accessibilityLabel="Rename mesocycle"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "borderTopColor": "#1E2125",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "gap": 14,
                  "paddingVertical": 14,
                }
              }
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={20}
                bbWidth={20}
                focusable={false}
                height={20}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    {
                      "flex": 0,
                      "height": 20,
                      "width": 20,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width={20}
              >
                <RNSVGGroup
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                >
                  <RNSVGGroup
                    fill={null}
                    propList={
                      [
                        "fill",
                        "stroke",
                        "strokeWidth",
                      ]
                    }
                    stroke={
                      {
                        "payload": 4287271065,
                        "type": 0,
                      }
                    }
                    strokeWidth={1.8}
                  >
                    <RNSVGPath
                      d="M15 5l4 4L9 19H5v-4zM13 7l4 4"
                      fill={
                        {
                          "payload": 4278190080,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                    />
                  </RNSVGGroup>
                </RNSVGGroup>
              </RNSVGSvgView>
              <Text
                style={
                  [
                    {
                      "color": "#C9CDD2",
                      "flex": 1,
                      "fontSize": 17,
                      "fontWeight": "400",
                    },
                    false,
                    false,
                  ]
                }
              >
                Rename mesocycle
              </Text>
            </View>
            <View
              accessibilityLabel="Mesocycle history"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "borderTopColor": "#1E2125",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "gap": 14,
                  "paddingVertical": 14,
                }
              }
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={20}
                bbWidth={20}
                focusable={false}
                height={20}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    {
                      "flex": 0,
                      "height": 20,
                      "width": 20,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width={20}
              >
                <RNSVGGroup
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                >
                  <RNSVGGroup
                    fill={null}
                    propList={
                      [
                        "fill",
                        "stroke",
                        "strokeWidth",
                      ]
                    }
                    stroke={
                      {
                        "payload": 4287271065,
                        "type": 0,
                      }
                    }
                    strokeWidth={1.8}
                  >
                    <RNSVGPath
                      d="M4.5 12a7.5 7.5 0 1 0 2.2-5.3L4.5 9"
                      fill={
                        {
                          "payload": 4278190080,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                    />
                    <RNSVGPath
                      d="M4.5 4.5V9H9"
                      fill={
                        {
                          "payload": 4278190080,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                    />
                    <RNSVGPath
                      d="M12 8v4l3 2"
                      fill={
                        {
                          "payload": 4278190080,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                    />
                  </RNSVGGroup>
                </RNSVGGroup>
              </RNSVGSvgView>
              <Text
                style={
                  [
                    {
                      "color": "#C9CDD2",
                      "flex": 1,
                      "fontSize": 17,
                      "fontWeight": "400",
                    },
                    false,
                    false,
                  ]
                }
              >
                Mesocycle history
              </Text>
            </View>
            <View
              accessibilityLabel="Stop mesocycle"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "borderTopColor": "#1E2125",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "gap": 14,
                  "paddingVertical": 14,
                }
              }
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={20}
                bbWidth={20}
                focusable={false}
                height={20}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    {
                      "flex": 0,
                      "height": 20,
                      "width": 20,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width={20}
              >
                <RNSVGGroup
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                >
                  <RNSVGGroup
                    fill={null}
                    propList={
                      [
                        "fill",
                        "stroke",
                        "strokeWidth",
                      ]
                    }
                    stroke={
                      {
                        "payload": 4293023564,
                        "type": 0,
                      }
                    }
                    strokeWidth={1.8}
                  >
                    <RNSVGRect
                      fill={
                        {
                          "payload": 4278190080,
                          "type": 0,
                        }
                      }
                      height={12}
                      rx={2}
                      width={12}
                      x={6}
                      y={6}
                    />
                  </RNSVGGroup>
                </RNSVGGroup>
              </RNSVGSvgView>
              <Text
                style={
                  [
                    {
                      "color": "#C9CDD2",
                      "flex": 1,
                      "fontSize": 17,
                      "fontWeight": "400",
                    },
                    {
                      "color": "#E2574C",
                    },
                    false,
                  ]
                }
              >
                Stop mesocycle
              </Text>
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`WorkoutMenuSheet — snapshots DoD: read-only 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="auto"
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "transform": [
          {
            "translateY": 0,
          },
        ],
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "flex": 1,
            "justifyContent": "flex-end",
          },
          {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        accessibilityLabel="Close"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "rgba(0, 0, 0, 0.5)",
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        style={
          [
            {
              "backgroundColor": "#17191C",
              "borderTopLeftRadius": 18,
              "borderTopRightRadius": 18,
              "maxHeight": "80%",
            },
            false,
            {
              "paddingBottom": 54,
            },
          ]
        }
        testID="bottom-sheet"
      >
        <View
          onResponderGrant={[Function]}
          onResponderRelease={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "paddingVertical": 8,
            }
          }
          testID="bottom-sheet-grabber-area"
        >
          <View
            style={
              {
                "backgroundColor": "#2A2D31",
                "borderRadius": 2.5,
                "height": 5,
                "width": 36,
              }
            }
          />
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingBottom": 10,
              "paddingHorizontal": 20,
            }
          }
        >
          <View
            style={
              {
                "flexShrink": 1,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#F5F5F4",
                  "fontSize": 22,
                  "fontWeight": "500",
                }
              }
            >
              Week 6 Day 2
            </Text>
            <Text
              style={
                {
                  "color": "#6B7076",
                  "fontSize": 15,
                  "marginTop": 2,
                }
              }
            >
              Upper/lower
            </Text>
          </View>
        </View>
        <RCTScrollView
          contentContainerStyle={
            {
              "paddingHorizontal": 20,
            }
          }
          keyboardShouldPersistTaps="handled"
        >
          <View>
            <View
              accessibilityLabel="Rename mesocycle"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "borderTopColor": "#1E2125",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "gap": 14,
                  "paddingVertical": 14,
                }
              }
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={20}
                bbWidth={20}
                focusable={false}
                height={20}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    {
                      "flex": 0,
                      "height": 20,
                      "width": 20,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width={20}
              >
                <RNSVGGroup
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                >
                  <RNSVGGroup
                    fill={null}
                    propList={
                      [
                        "fill",
                        "stroke",
                        "strokeWidth",
                      ]
                    }
                    stroke={
                      {
                        "payload": 4287271065,
                        "type": 0,
                      }
                    }
                    strokeWidth={1.8}
                  >
                    <RNSVGPath
                      d="M15 5l4 4L9 19H5v-4zM13 7l4 4"
                      fill={
                        {
                          "payload": 4278190080,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                    />
                  </RNSVGGroup>
                </RNSVGGroup>
              </RNSVGSvgView>
              <Text
                style={
                  [
                    {
                      "color": "#C9CDD2",
                      "flex": 1,
                      "fontSize": 17,
                      "fontWeight": "400",
                    },
                    false,
                    false,
                  ]
                }
              >
                Rename mesocycle
              </Text>
            </View>
            <View
              accessibilityLabel="Mesocycle history"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "borderTopColor": "#1E2125",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "gap": 14,
                  "paddingVertical": 14,
                }
              }
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={20}
                bbWidth={20}
                focusable={false}
                height={20}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    {
                      "flex": 0,
                      "height": 20,
                      "width": 20,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width={20}
              >
                <RNSVGGroup
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                >
                  <RNSVGGroup
                    fill={null}
                    propList={
                      [
                        "fill",
                        "stroke",
                        "strokeWidth",
                      ]
                    }
                    stroke={
                      {
                        "payload": 4287271065,
                        "type": 0,
                      }
                    }
                    strokeWidth={1.8}
                  >
                    <RNSVGPath
                      d="M4.5 12a7.5 7.5 0 1 0 2.2-5.3L4.5 9"
                      fill={
                        {
                          "payload": 4278190080,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                    />
                    <RNSVGPath
                      d="M4.5 4.5V9H9"
                      fill={
                        {
                          "payload": 4278190080,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                    />
                    <RNSVGPath
                      d="M12 8v4l3 2"
                      fill={
                        {
                          "payload": 4278190080,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                    />
                  </RNSVGGroup>
                </RNSVGGroup>
              </RNSVGSvgView>
              <Text
                style={
                  [
                    {
                      "color": "#C9CDD2",
                      "flex": 1,
                      "fontSize": 17,
                      "fontWeight": "400",
                    },
                    false,
                    false,
                  ]
                }
              >
                Mesocycle history
              </Text>
            </View>
            <View
              accessibilityLabel="Stop mesocycle"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "borderTopColor": "#1E2125",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "gap": 14,
                  "paddingVertical": 14,
                }
              }
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={20}
                bbWidth={20}
                focusable={false}
                height={20}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    {
                      "flex": 0,
                      "height": 20,
                      "width": 20,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width={20}
              >
                <RNSVGGroup
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                >
                  <RNSVGGroup
                    fill={null}
                    propList={
                      [
                        "fill",
                        "stroke",
                        "strokeWidth",
                      ]
                    }
                    stroke={
                      {
                        "payload": 4293023564,
                        "type": 0,
                      }
                    }
                    strokeWidth={1.8}
                  >
                    <RNSVGRect
                      fill={
                        {
                          "payload": 4278190080,
                          "type": 0,
                        }
                      }
                      height={12}
                      rx={2}
                      width={12}
                      x={6}
                      y={6}
                    />
                  </RNSVGGroup>
                </RNSVGGroup>
              </RNSVGSvgView>
              <Text
                style={
                  [
                    {
                      "color": "#C9CDD2",
                      "flex": 1,
                      "fontSize": 17,
                      "fontWeight": "400",
                    },
                    {
                      "color": "#E2574C",
                    },
                    false,
                  ]
                }
              >
                Stop mesocycle
              </Text>
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
